# TrafficSimulation

./: agents.py  app.py  cell.py  creation.py  model.py  moneymodel.py  notebook.ipynb  notebook.py  readme.md  run.py  server.py  test_app.py
Results/20250516_184907/: 20250516_184907_snapshot_statistics_5_minutes.csv  20250516_184907_total_statistics.csv
Results/20250516_223310/: 20250516_223310_snapshot_statistics_5_minutes.csv  20250516_223310_total_statistics.csv
Results/20250516_230128/: 20250516_230128_snapshot_statistics_5_minutes.csv  20250516_230128_total_statistics.csv
Results/20250516_230258/: 20250516_230258_snapshot_statistics_5_minutes.csv  20250516_230258_total_statistics.csv
Results/20250516_230605/: 20250516_230605_snapshot_statistics_5_minutes.csv  20250516_230605_total_statistics.csv
Results/20250517_092425/: 20250517_092425_snapshot_statistics_5_minutes.csv  20250517_092425_total_statistics.csv
Results/20250517_095158/: 20250517_095158_snapshot_statistics_5_minutes.csv  20250517_095158_total_statistics.csv
Results/20250517_095408/: 20250517_095408_snapshot_statistics_5_minutes.csv  20250517_095408_total_statistics.csv
Results/20250517_100817/: 20250517_100817_snapshot_statistics_5_minutes.csv  (+1 more)
Simulation/: city_model.py  config.py  mesa_server.py  server.py  utilities.py  vispy_server.py
Simulation/utilities/pathfinding/: CMakeLists.txt  __init__.py  astar_cpp.cpp  astar_cuda.py  astar_jit.py  astar_numba.py  astar_python.py  astar_tensorflow.py  astar_tensorflow_batch.py  path_planner.py  pyproject.toml
templates/: index.html
(+56 files in other folders)
